# Ai-Based-Crop-Prediction

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  Procfile  README.md  __init__.py  pyproject.toml  render.yaml  requirements.txt  start.sh
app/: main.py
backend/: crop_recommendation.py  disease_prediction.py  fertilizer_recommendation.py  market_prices.py  npk_lookup.py  pesticide_recommendation.py  ph_lookup.py  rainfall_lookup.py  utils.py  weather_service.py  yield_data_utils.py  yield_prediction.py
data/: ai_chat_history.json  crop_details.json  soil_profiles.csv
data/raw/: crop_recommendation_region_augmented.csv
docs/: README.md  environment-setup.md
frontend/: app.py
frontend/components/: cards.py  forms.py  layout.py
frontend/pages/: About.py
frontend/styles/: theme.css
modules/: ai_chatbot.py
scripts/: download_dataset.py  train_model.py  train_yield_regressor.py
src/: __init__.py
src/data/: __init__.py  dataset.py  ingestion.py
src/features/: __init__.py  advisory.py  engineering.py  fertilizer.py  pesticide.py  weather.py
src/models/: __init__.py  disease.py  predictor.py  training.py  yield_estimator.py
src/pipelines/: __init__.py
src/utils/: __init__.py  config.py
utils/: crop_guide.py  soil_profiles.py
