[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "crop-recommender"
version = "0.1.0"
description = "AI-based crop recommendation system with production-ready scaffolding"
authors = [{ name = "Hackathon Team" }]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.2,<2.3",
    "numpy>=1.26,<2.0",
    "scikit-learn>=1.4,<1.5",
    "streamlit>=1.31,<1.32",
    "requests>=2.31,<3.0",
    "joblib>=1.3,<2.0",
    "pydantic>=2.6,<3.0",
    "python-dotenv>=1.0,<2.0"
]

[tool.setuptools.packages.find]
where = ["src"]
